# scoreboard

./: Dockerfile  compose.yml  manage.py  pyproject.toml  requirements.txt  vercel.json
poto/: asgi.py  settings.py  urls.py  wsgi.py
win/: apps.py  forms.py  models.py  urls.py  views.py
win/management/commands/: add_teams.py  teams.txt
win/migrations/: 0001_initial.py  0002_alter_team_code.py
win/templates/: code.html
