[tool.poetry]
name = "poto"
version = "0.1.0"
description = ""
authors = ["Sergio Liberman Bronfman <sergiolib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
psycopg = {extras = ["binary"], version = "^3.1.18"}
uvicorn = "^0.28.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.10.0"}
python-lsp-black = "^2.0.0"
python-lsp-isort = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
